# eyalytics

./: .gitignore  app.py  kpi_extractor_jb.ipynb  pyproject.toml
data/cwyod/: code_assistant_id.txt  rag_assistant_id.txt
data/cwyod/emissions/: general_purpose_info.txt
data/cwyod/equities/: stock_price_info.txt
data/cwyod/messages/: messages_thread_9gFYX48M2fCzqOJM22PxCpjL.json  messages_thread_gfDH3twnbkHC2UulnoR2r42w.json
data/cwyod/mifid/: mifid_info.txt
data/cwyod/miscellaneous/: chinook.db
data/cwyod/run_steps/: run_steps_thread_9gFYX48M2fCzqOJM22PxCpjL.json  run_steps_thread_gfDH3twnbkHC2UulnoR2r42w.json
data/cwyod/salytics/: salytics_info.txt
data/faiss_db/: coca-cola-business-and-sustainability-report-2022.pkl
data/pickle_db/: Colruyt_Group_annual-report-with-sustainability-reporting-2022-2023_2022_inputs.pkl  Colruyt_Group_annual-report-with-sustainability-reporting-2022-2023_inputs.pkl
notebooks/: CWYOD.ipynb  ESG_KPI_Explainer.ipynb  KPI_extractor.ipynb  KPI_extractor_agent.ipynb  KPI_extractor_chain.ipynb  KPI_extractor_final.ipynb  PDF_loader.ipynb  PDF_loader_jb.ipynb  PDF_retrieval.ipynb  URL_retrieval.ipynb  create-notebook.py  kpi_extractor_jb.ipynb  optimisation_results.txt  pandas_agent.ipynb
notebooks/.ipynb_checkpoints/: PDF_loader-checkpoint.ipynb
notebooks/archive/: KPI_extractor_agent.ipynb  KPI_extractor_agent_v2.ipynb  KPI_extractor_chain.ipynb  PDF_retrieval.ipynb
src/: app.py  assistant.py
src/gui/: background.py  chat.py  chat_agent.py  data.py  data_loader.py  image.py  ui_elements.py  users.py
src/utils/: csv_agent.py  loader.py  search.py
