[tool.poetry]
name = "eyalytics"
version = "0.1.0"
description = ""
authors = ["krystofmincev <krystof.mincev@be.ey.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0"
langchain = "^0.0.212"
openai = "^0.27.8"
tiktoken = "^0.4.0"
duckduckgo-search = "^3.8.3"
python-dotenv = "^1.0.0"
google-search-results = "^2.4.2"
requests = "^2.31.0"
selenium = "^4.10.0"
beautifulsoup4 = "^4.12.2"
PyPDF2 = "^3.0.1"
"pdfminer.six" = "^20221105"
pinecone-client = {extras = ["grpc"], version = "^2.2.2"}
chromadb = "^0.4.5"
faiss-cpu = "^1.7.4"
camelot-py = "^0.11.0"
opencv-python = "^4.8.0"
tabula = "^1.0.5"
pdfplumber = "^0.10.2"
pyperclip = "^1.8.2"
tabula-py = "^2.7.0"
webdriver-manager = "^4.0.0"
chromedriver-autoinstaller = "^0.6.2"
prettytable = "^3.8.0"
docx = "^0.2.4"
python-docx = "^0.8.11"
PyAutoGUI = "^0.9.54"
docx2python = "^2.7.3"

[tool.poetry.dev-dependencies]
ipython = "8.12"
jupyter = "^1.0.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
